# dprs

./: .gitignore  NOTICE  README.rst  demo.ipynb  pyproject.toml
.virtual_documents/: demo.ipynb
Learning to rank/: LTR with custom loss function.ipynb  output.txt  ragged_demo.ipynb  training_log.csv
src/dprs/: __init__.py  dprs_compute.py  main.py
tests/: test_dprs.py
